--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ header {
   text-align: center;
 }
 
-.header-center h1 { margin: 0; font-size: 20px; }
-.header-center p { margin: 0; font-size: 14px; opacity: 0.9; }
+.header-center p { margin: 0; font-size: 20px; }
+.header-center h1 { margin: 0; font-size: 14px; opacity: 0.9; }
+.header-center h2 { margin: 0; font-size: 14px; opacity: 0.9; }
 
 #menu-toggle {
   font-size: 22px;
